<resources>
    <string name="app_name">Bodegapp</string>
    <string name="login_et_email">Correo electrónico</string>
    <string name="login_et_password">Contraseña</string>
    <string name="login_btn_login">Iniciar sesión</string>
    <string name="login_tv_signin">¿Aún no tienes cuenta?</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="api_url">https://bodegapp.medisant.mx/api</string>
    <!--<string name="api_url">http://192.168.100.13/api-bodegas/public/api</string>-->

    <string name="faqs_link">https://bodegapp.medisant.mx</string>
    <string name="terms_link">https://bodegapp.medisant.mx</string>
    <string name="privacy_link">https://bodegapp.medisant.mx</string>
    <string name="support_phone">3319910156</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_url">https://bodegapp.medisant.mx/storage/</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="address">Dirección</string>
    <string name="phone">Teléfono</string>
    <string name="confirm_password">Confirmar contraseña</string>

    <string-array name="plan_list">
        <item>1 mes</item>
        <item>3 meses</item>
        <item>6 meses</item>
        <item>12 meses</item>
    </string-array>
</resources>